--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme.Mobile" parent="Theme.AppCompat.DayNight">
+    <style name="AppTheme.Mobile" parent="Theme.MaterialComponents.DayNight">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="colorAccent">@color/accent</item>
@@ -8,15 +8,9 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="buttonStyle">@style/MainButton</item>
         <item name="windowActionModeOverlay">true</item>
-        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:windowBackground">@color/background</item>
 
         <item name="md_color_button_text">@color/primaryText</item>
-    </style>
-
-    <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="spinBars">true</item>
-        <item name="color">@color/white</item>
     </style>
 
     <style name="AppTheme.Mobile.Launcher" parent="AppTheme.Mobile">
