--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,6 @@
 <resources>
 
-    <style name="AppTheme.Mobile" parent="Theme.MaterialComponents.DayNight">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="AppTheme.Mobile" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorAccent">@color/accent</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
@@ -11,6 +9,10 @@
         <item name="android:windowBackground">@color/background</item>
 
         <item name="md_color_button_text">@color/primaryText</item>
+    </style>
+
+    <style name="AppTheme.Mobile.MainActivity" parent="AppTheme.Mobile">
+
     </style>
 
     <style name="AppTheme.Mobile.Launcher" parent="AppTheme.Mobile">
