--- a/app/src/main/res/layout/fragment_search_map.xml
+++ b/app/src/main/res/layout/fragment_search_map.xml
@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <View
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:background="@drawable/map_marker_current"
+            android:elevation="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:layout_width="256dp"
+            android:layout_height="256dp"
+            android:background="@drawable/map_marker_current_dashed"
+            android:elevation="5dp"
+            android:outlineProvider="none"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/map"
@@ -17,9 +39,11 @@
 
     <include
         android:id="@+id/layout_stop_list"
-        layout="@layout/content_bottom_sheet_stop_list" />
+        layout="@layout/content_bottom_sheet_stop_list"
+        android:elevation="10dp" />
 
     <include
         android:id="@+id/layout_route_list"
-        layout="@layout/content_bottom_sheet_route_list" />
+        layout="@layout/content_bottom_sheet_route_list"
+        android:elevation="10dp" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
