--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,8 @@
     <color name="eta_card_line_text_mobile">@color/white</color>
     <color name="eta_card_background">@color/white</color>
 
+    <color name="map_marker">@color/md_blue_800</color>
+
     <!-- action bar-->
     <color name="actionbar_color">@color/primary</color>
     <color name="actionbar_title_text">@color/white</color>
