--- a/app/src/main/res/drawable/map_marker_current_moving.xml
+++ b/app/src/main/res/drawable/map_marker_current_moving.xml
@@ -1,11 +1,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
+            <solid android:color="@color/map_marker_moving" />
             <stroke
                 android:width="2dp"
-                android:color="@color/map_marker"
-                android:dashWidth="16dp"
-                android:dashGap="16dp" />
+                android:color="@color/background" />
         </shape>
     </item>
 </layer-list>
