--- a/app/src/main/res/layout/content_bottom_sheet_route_list.xml
+++ b/app/src/main/res/layout/content_bottom_sheet_route_list.xml
@@ -17,14 +17,33 @@
         app:layout_constraintBottom_toTopOf="@id/recyclerView"
         app:layout_constraintTop_toTopOf="parent">
 
+        <Button
+            android:id="@+id/streetViewBtn"
+            style="@style/MainButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:paddingStart="8dp"
+            android:paddingTop="0dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="0dp"
+            android:text="街景相片"
+            android:textSize="12sp"
+            app:icon="@drawable/ic_streetview_24"
+            app:iconSize="14dp"
+            app:layout_constraintBottom_toBottomOf="@id/stopNameTv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/stopNameTv" />
+
         <TextView
             android:id="@+id/stopNameTv"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:textSize="28sp"
+            android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/streetViewBtn"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/viewToggle"
             tools:text="@string/demo_card_stop_name" />
