--- a/app/src/main/res/layout/content_bottom_sheet_stop_list.xml
+++ b/app/src/main/res/layout/content_bottom_sheet_stop_list.xml
@@ -22,12 +22,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="12dp"
+            android:text="@string/stop_list_bottom_sheet_title"
             android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/viewToggle"
-            tools:text="@string/route_list_bottom_sheet_title" />
+            app:layout_constraintTop_toBottomOf="@id/viewToggle" />
 
         <View
             android:id="@+id/viewToggle"
