--- a/app/src/main/res/layout/fragment_search_map.xml
+++ b/app/src/main/res/layout/fragment_search_map.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,6 +10,7 @@
         android:layout_height="match_parent">
 
         <View
+            android:id="@+id/currentMarker"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:background="@drawable/map_marker_current"
@@ -18,16 +20,37 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-            android:layout_width="256dp"
-            android:layout_height="256dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/currentMarkerCircle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:background="@drawable/map_marker_current_dashed"
             android:elevation="5dp"
             android:outlineProvider="none"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible">
+
+            <hibernate.v2.sunshine.ui.view.OutlineTextView
+                android:id="@+id/currentMarkerText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:letterSpacing="0.1"
+                android:textColor="@color/map_marker"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:outlineColor="@color/white"
+                app:outlineSize="2dp"
+                tools:text="@string/map_marker_distance_5" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/map"
