--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,8 @@
     <color name="eta_card_line_text_mobile">@color/white</color>
     <color name="eta_card_background">@color/white</color>
 
-    <color name="map_marker">@color/md_blue_800</color>
+    <color name="map_marker">#1565C0</color>
+    <color name="map_marker_moving">#990D47A1</color>
 
     <!-- action bar-->
     <color name="actionbar_color">@color/primary</color>
