--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,12 +75,18 @@
         <item name="android:padding">24dp</item>
     </style>
 
+    <style name="ShapeAppearanceOverlay.Button.50" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
     <style name="MainButton" parent="Widget.MaterialComponents.Button">
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/white</item>
         <item name="colorAccent">@color/mainButton</item>
         <item name="colorButtonNormal">@color/mainButton</item>
         <item name="colorControlHighlight">@color/secondaryText</item>
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.Button.50</item>
     </style>
 
     <style name="GreenButton" parent="Widget.MaterialComponents.Button">
