--- a/app/src/main/res/layout/tab_add_eta.xml
+++ b/app/src/main/res/layout/tab_add_eta.xml
@@ -9,9 +9,11 @@
         android:id="@+id/tabTitleTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
