--- a/app/src/main/res/layout/content_eta_classic.xml
+++ b/app/src/main/res/layout/content_eta_classic.xml
@@ -26,7 +26,7 @@
 
         <LinearLayout
             android:id="@+id/routeNumberLl"
-            android:layout_width="68dp"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -41,9 +41,9 @@
                 android:includeFontPadding="false"
                 android:maxLines="1"
                 android:text="@string/demo_card_route_number"
-                android:textSize="32sp"
+                android:textSize="28sp"
                 android:textStyle="bold"
-                app:autoSizeMaxTextSize="32sp"
+                app:autoSizeMaxTextSize="28sp"
                 app:autoSizeTextType="uniform" />
         </LinearLayout>
 
@@ -51,10 +51,8 @@
             android:id="@+id/routeDirectionLl"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/etaMinuteLl"
             app:layout_constraintHorizontal_weight="3"
@@ -68,7 +66,7 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@string/demo_card_route_desc_classic"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,12 +76,14 @@
                 android:id="@+id/stopNameTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:ellipsize="marquee"
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:text="@string/demo_card_stop_name"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:autoSizeMaxTextSize="20sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toTopOf="@id/routeDirectionTv"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -95,11 +95,9 @@
             android:id="@+id/etaMinuteLl"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center_vertical|end"
-            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/routeDirectionLl"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -109,20 +107,34 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|end"
                 android:text="@string/demo_card_eta_minute_classic"
+                android:textColor="@color/primary"
                 android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/etaTimeTv"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/etaMinuteUnitTv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/etaMinuteUnitTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:gravity="center_vertical|end"
+                android:text="@string/demo_card_eta_minute_classic_unit"
+                android:textSize="14sp"
+                app:layout_constraintBaseline_toBaselineOf="@id/etaMinuteTv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/etaMinuteTv" />
 
             <TextView
                 android:id="@+id/etaTimeTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|end"
-                android:maxLines="2"
+                android:maxLines="1"
                 android:text="@string/demo_card_eta_minute_classic_time"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
