--- a/app/src/main/res/layout/item_bottom_sheet_route.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_route.xml
@@ -54,8 +54,6 @@
             android:id="@+id/routeDirectionLl"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -68,11 +66,13 @@
                 android:id="@+id/routeDirectionTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:ellipsize="marquee"
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:autoSizeMaxTextSize="20sp"
+                app:autoSizeMinTextSize="16sp"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -85,11 +85,9 @@
             android:id="@+id/etaMinuteLl"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center_vertical|end"
-            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_weight="2"
+            app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/routeDirectionLl"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -99,20 +97,34 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|end"
                 android:text="@string/demo_card_eta_minute_classic"
+                android:textColor="@color/primary"
                 android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/etaTimeTv"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/etaMinuteUnitTv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/etaMinuteUnitTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:gravity="center_vertical|end"
+                android:text="@string/demo_card_eta_minute_classic_unit"
+                android:textSize="14sp"
+                app:layout_constraintBaseline_toBaselineOf="@id/etaMinuteTv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/etaMinuteTv" />
 
             <TextView
                 android:id="@+id/etaTimeTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|end"
-                android:maxLines="2"
+                android:maxLines="1"
                 android:text="@string/demo_card_eta_minute_classic_time"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
