--- a/app/src/main/res/layout/tab_add_eta.xml
+++ b/app/src/main/res/layout/tab_add_eta.xml
@@ -12,6 +12,7 @@
         android:gravity="center"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
+        android:textColor="@color/primaryText"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
