--- a/app/src/main/res/layout/content_eta_classic.xml
+++ b/app/src/main/res/layout/content_eta_classic.xml
@@ -26,7 +26,7 @@
 
         <LinearLayout
             android:id="@+id/routeNumberLl"
-            android:layout_width="60dp"
+            android:layout_width="68dp"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,16 +35,14 @@
 
             <TextView
                 android:id="@+id/routeNumberTv"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:includeFontPadding="false"
                 android:maxLines="1"
                 android:text="@string/demo_card_route_number"
-                android:textSize="28sp"
-                android:textStyle="bold"
-                app:autoSizeMaxTextSize="28sp"
-                app:autoSizeTextType="uniform" />
+                android:textSize="24sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
