--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,8 @@
 
     <color name="background">@color/md_grey_50</color>
     <color name="border">@color/md_grey_200</color>
-    <color name="primaryText">@color/md_grey_900</color>
-    <color name="secondaryText">@color/md_grey_800</color>
-    <color name="hintText">@color/md_grey_700</color>
+    <color name="primaryText">@color/md_grey_800</color>
+    <color name="secondaryText">@color/md_grey_700</color>
     <color name="bottomSheetToggleView">@color/md_grey_300</color>
 
     <color name="badge_route_bg">@color/md_grey_700</color>
@@ -47,6 +46,7 @@
     <color name="brand_color_ctb">#FBC02D</color>
     <color name="brand_color_nwfb">#7E57C2</color>
     <color name="brand_color_gmb">#2E7D32</color>
+    <color name="brand_color_mtr">#00234F</color>
     <color name="eta_card_bg_selected">#11FFFFFF</color>
 
     <color name="transparent">#00000000</color>
