--- a/app/src/main/res/layout/item_bottom_sheet_route.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_route.xml
@@ -30,7 +30,7 @@
         <LinearLayout
             android:id="@+id/routeNumberLl"
             android:layout_width="68dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
