--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="buttonStyle">@style/MainButton</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="android:textColor">@color/primaryText</item>
         <item name="android:windowBackground">@color/background</item>
 
         <item name="md_color_button_text">@color/primaryText</item>
