--- a/app/src/main/res/layout/content_empty_list.xml
+++ b/app/src/main/res/layout/content_empty_list.xml
@@ -8,6 +8,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,8 +21,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
             android:text="@string/eta_button_add"
             android:textSize="18sp"
             android:visibility="gone"
@@ -29,7 +29,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/emptyDescTv" />
+            app:layout_constraintTop_toBottomOf="@id/emptyDescTv"
+            tools:visibility="visible" />
 
         <ImageView
             android:id="@+id/emptyIv"
