--- a/app/src/main/res/layout/fragment_eta.xml
+++ b/app/src/main/res/layout/fragment_eta.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipChildren="false"
         android:clipToPadding="false"
         android:orientation="vertical"
         android:visibility="gone"
