--- a/app/src/main/res/layout/item_eta_button_group.xml
+++ b/app/src/main/res/layout/item_eta_button_group.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="12dp"
+    android:layout_marginBottom="12dp"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     android:paddingStart="16dp"
     android:paddingEnd="16dp">
 
@@ -11,10 +15,6 @@
         style="@style/MainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
         android:text="@string/eta_button_add"
         android:textSize="18sp"
         app:icon="@drawable/outline_add_white_24"
@@ -29,10 +29,6 @@
         style="@style/MainButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
         android:text="@string/eta_button_edit"
         android:textSize="18sp"
         app:icon="@drawable/outline_edit_white_24"
