--- a/app/src/main/res/layout/item_bottom_sheet_route.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_route.xml
@@ -58,7 +58,7 @@
             android:paddingEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/etaMinuteLl"
-            app:layout_constraintHorizontal_weight="3"
+            app:layout_constraintHorizontal_weight="2"
             app:layout_constraintStart_toEndOf="@id/routeNumberLl"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -100,7 +100,7 @@
                 android:textColor="@color/primary"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/etaTimeTv"
+                app:layout_constraintBottom_toTopOf="@id/etaTimeRv"
                 app:layout_constraintEnd_toStartOf="@id/etaMinuteUnitTv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -117,18 +117,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/etaMinuteTv" />
 
-            <TextView
-                android:id="@+id/etaTimeTv"
-                android:layout_width="0dp"
+            <hibernate.v2.sunshine.ui.view.TouchDisabledRecyclerView
+                android:id="@+id/etaTimeRv"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical|end"
-                android:maxLines="1"
-                android:text="@string/demo_card_eta_minute_classic_time"
-                android:textSize="14sp"
+                android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/etaMinuteTv" />
+                app:layout_constraintTop_toBottomOf="@id/etaMinuteTv"
+                tools:itemCount="2"
+                tools:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+                tools:listitem="@layout/item_eta_time" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
