--- a/app/src/main/res/layout/item_eta_button_group.xml
+++ b/app/src/main/res/layout/item_eta_button_group.xml
@@ -12,7 +12,7 @@
 
     <Button
         android:id="@+id/addStopButton"
-        style="@style/MainButton"
+        style="@style/MainBorderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/eta_button_add"
@@ -26,7 +26,7 @@
 
     <Button
         android:id="@+id/editStopButton"
-        style="@style/MainButton"
+        style="@style/MainBorderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/eta_button_edit"
