feat: update route badge

--- a/app/src/main/res/layout/fragment_add_eta.xml
+++ b/app/src/main/res/layout/fragment_add_eta.xml
@@ -39,6 +39,5 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@id/hintCl"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_add_eta_company" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
